Linking README to index.js

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "create-next-example-app",
+  "version": "0.01",
+  "name": "next-chess-board",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "next": "^4.1.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "universal-fetch": "^1.0.0"
+    "react-markdown": "^2.5.0"
   }
 }
