--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "version": "0.1.0",
+  "author": "Domingo E. Savoretti",
   "name": "next-chess-board",
+  "main": "components/board.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "chess.js": "^0.10.2",
+    "chess.js": "https://github.com/sandy98/chess.js",
     "isomorphic-fetch": "^2.2.1",
     "next": "^4.1.4",
     "react": "^16.0.0",
