--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "prepublish": "next build && cp .next/dist/components/board.js lib/board.js"
+    "prepare": "next build && cp .next/dist/components/board.js lib/board.js"
   },
   "dependencies": {
     "chess.js": "https://github.com/sandy98/chess.js",
