--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "chess.js": "https://github.com/sandy98/chess.js",
     "isomorphic-fetch": "^2.2.1",
-    "material-ui": "^0.19.4",
+    "material-ui": "next",
     "next": "^4.1.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
